[project]
name = "phones"
version = "0.0.1"
description = "A collection of utilities for handling IPA phones."
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "pandas>=0.25.3",
    "numpy>=1.19.5",
    "tqdm>=4.62.3",
    "scipy>=1.5.4",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material>=8.1.9",
    "mkdocstrings>=0.16.2",
    "mkdocs-jupyter>=0.13.0",
    "nbconvert==5.6.1",
    "pytkdocs>=0.11.0",
    "pymdown-extensions>=9.1",
    "markdown-include>=0.6.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
