[project]
name = "phones"
version = "0.0.5"
description = "A collection of utilities for handling IPA phones."
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "pandas>=0.25.3",
    "numpy>=1.19.5",
    "tqdm>=4.62.3",
    "scipy>=1.5.4",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
homepage = "https://cdminix.me/phones"

[project.optional-dependencies]
plots = [
    "plotly>=5.5.0",
    "scikit-learn>=0.24.2",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material>=8.1.9",
    "mkdocstrings>=0.16.2",
    "mkdocs-jupyter>=0.13.0",
    "nbconvert==5.6.1",
    "pytkdocs>=0.11.0",
    "pymdown-extensions>=9.1",
    "markdown-include>=0.6.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
