[project]
name = "phones"
version = "0.0.7"
description = "A collection of utilities for handling IPA phones."
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
requires-python = ">=3.8,<3.11"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "scipy>=1.10.1",
]

[project.urls]
homepage = "https://cdminix.me/phones"

[project.optional-dependencies]
plots = [
    "plotly>=5.5.0",
    "scikit-learn>=0.24.2",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material>=8.1.9",
    "mkdocstrings>=0.16.2",
    "mkdocs-jupyter>=0.13.0",
    "nbconvert==5.6.1",
    "pytkdocs>=0.11.0",
    "pymdown-extensions>=9.1",
    "markdown-include>=0.6.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
